<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.app.Text_Images">

    <ImageView android:id="@+id/ImgFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagen_ejemplo"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/LblEtiqueta"
        android:layout_alignEnd="@+id/LblEtiqueta" />

    <TextView android:id="@+id/LblEtiqueta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escribe_algo"
        android:typeface="monospace"
        android:width="60dp"
        android:layout_alignTop="@+id/ImgFoto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText android:id="@+id/TxtBasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/LblEtiqueta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/TxtImagenHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_usuario"
        android:hint="@string/usuario"
        android:textColorHint="#CFCFCF"
        android:inputType="text"
        android:textIsSelectable="false"
        android:backgroundTint="@android:color/darker_gray"
        android:backgroundTintMode="src_over"
        android:layout_below="@+id/TxtBasico"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
